--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,9 @@
-.App {
-  text-align: center;
-}
+/* در این فایل تنها فایلهای سی اس اس ایمپورت می شوند
+* تمام کدها در فایل ها مربوط به هر قسمت می باشد
+* فایل های گلوبال در پوشه سی‌اس‌اس نگهداری می‌شوند 
+* فایلهای مربوط به هر کامپوننت در کنار همان کامپوننت ایجاد می‌شوند
+*/
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import './assets/icofontMe/icofont.min.css';
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+@import './css/index.css';
