--- a/src/components/header/subHeader/styleSliderHeader.module.css
+++ b/src/components/header/subHeader/styleSliderHeader.module.css
@@ -58,42 +58,52 @@
 
 
 
-.slick_thumb {
+.slick_dots_header_slider {
+    position: 'absolute' !important;
+    left: 0;
+    right: 0;
+    bottom: -3px;
 
-    bottom: 5px !important;
 }
 
 
-
-.slick_thumb_a {
-
-    width: 14px;
-    height: 14px;
-    border-radius: 50%;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.4);
+.slick_dots_header_slider li {
+    list-style: none;
     display: inline-block;
-    border: 2px solid #c4c4c4;
+    margin: 0 2px;
 }
 
 
+.slick_dots_header_slider li button {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    border: 1px solid #4b4b4b;
+    box-shadow: 0 0 7px #e0e0e0;
+    outline: none;
+    padding: 0;
+    cursor: pointer;
 
-@media screen and (max-width:768px) {
+}
 
-    .slick_thumb_a {
+@media screen and (min-width: 768px) {
+    .slick_dots_header_slider {
+        bottom: 3px;
+    }
 
-        width: 8px;
-        height: 8px;
-        border-radius: 50%;
-        box-shadow: 0 0 6px rgba(0, 0, 0, 0.4);
-        display: inline-block;
-        border: 2px solid #9c9c9c;
+    .slick_dots_header_slider li button {
+        width: 14px;
+        height: 14px;
     }
 
 }
 
+.slick_dots_header_slider li button::before {
+    content: none;
+}
 
 
-.HFactive {
+.slick_active {
+    border-color: rgb(30, 190, 137) !important;
 
-    background-color: rgb(151, 148, 116);
 }
