--- a/src/components/sliderMe/sliderMe.css
+++ b/src/components/sliderMe/sliderMe.css
@@ -1,6 +1,6 @@
 .bodySlider {
     width: 100%;
-    padding: clamp(9px , 2.5vw, 18px) 0;
+    padding: clamp(9px, 2.5vw, 18px) 0;
     overflow: hidden;
     position: relative;
     direction: rtl;
@@ -27,7 +27,7 @@
     position: absolute;
     z-index: 2;
     top: 50px;
-    
+
 }
 
 
@@ -36,7 +36,7 @@
 برای عدم نمایش دکمه‌های ناوبری در تبلت و موبایل 
 این کلاس توسط ری‌اکت به المان اضافه یا حذف میشود
 */
-.notShowDivBtnMe{
+.notShowDivBtnMe {
     display: none !important;
 }
 
@@ -74,6 +74,14 @@
     font-size: 28px;
 }
 
+
+.btnMe:hover {
+    border-color: #187cce;
+    color: #187cce;
+    background-color: #e3e9ee;
+
+}
+
 /* ------------- انواع استایل بندی اسلاید ها ------------------- */
 
 /* 
@@ -86,25 +94,15 @@
 .title_normal_me,
 .container_normal_me,
 .more_normal_me {
-    width: 106px;
-    height: 177px;
+    width: clamp(106px, 40vw, 136px);
+    height: clamp(177px, calc((40vw / 3) * 5), calc((136px / 3) * 5));
     display: flex;
     flex-direction: column;
     margin: 0 0.5px;
-    /* margin: 0 clamp(0.5px, 0.15vw, 1.2px); */
 
 }
 
-@media screen and (min-width: 769px) {
-    .title_normal_me,
-    .container_normal_me,
-    .more_normal_me {
-        
-        margin: 0 1px;
-        
-    
-    } 
-}
+
 
 /* استایل دهی title کامپوننت productSlider */
 .title_normal_me {
@@ -116,9 +114,12 @@
 
 .titleH2_normal_me {
     height: 25%;
-    line-height: 50%;
-    font-size: 1.3rem;
+    font-size: 1rem;
     color: #ffffff;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 
@@ -176,26 +177,113 @@
 
 
 .name_normal_me {
-    font-size: 1rem;
+    width: 100%;
+    font-size: 0.8rem;
+    height: 28px;
+    margin-top: 0.5px;
+    margin-bottom: 2px;
+    padding: 5px 5px 0 0;
+    color: #44445f;
+    text-align: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
 }
 
 
 
 .shop_normal_me {
+    height: 15px;
     font-size: 0.6rem;
+    display: inline-flex;
+
 }
+
+
+.shop_shop_normal_me {
+    padding-right: 5px;
+
+}
+
+
+.shop_name_normal_me {}
 
 
 
 .price_normal_me {
-    font-size: 0.9rem;
+    height: 28px;
+    margin-top: 3.8px;
+    /* padding-right: 5px; */
+    padding: 0 5px;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+
+}
+
+
+.price_toman_normal_me {
+    width: 30px;
+    font-size: 0.6rem;
+    /* padding-left: 5px; */
+    color: #3f4064;
+
+
+}
+
+
+.price_number_normal_me {
+    width: 100%;
+    font-size: 0.8rem;
+    font-weight: 600;
+    padding-left: 2px;
+    text-align: end;
+    color: #3f4064;
+
+}
+
+
+.price_percent_normal_me {
+    font-size: 0.6rem;
+    padding: 0 0.7px;
+    background-color: rgb(214, 238, 230);
+    color: #031c55;
+    border-radius: 3px;
+
+
 }
 
 
 
 .oldPrice_normal_me {
-    font-size: 0.5rem;
+    height: 14px;
+    padding-bottom: 12px;
+    font-size: 0.65rem;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+
 }
+
+
+
+.oldPrice_div1_normal_me {
+    width: 30px;
+
+}
+
+
+
+.oldPrice_price_normal_me {
+    padding: 4px;
+    color: #cdcdd6;
+    text-decoration: line-through;
+}
+
+
+
+.oldPrice_div2_normal_me {}
 
 
 
@@ -236,3 +324,91 @@
 
 
 .moreBrnText_normal_me {}
+
+
+@media screen and (min-width: 450px) {
+
+    .title_normal_me,
+    .container_normal_me,
+    .more_normal_me {
+
+        width: clamp(136px, 30vw, 175px);
+        height: clamp(136px, calc((30vw / 3) * 5), calc((175px / 3) * 5));
+
+
+    }
+
+    .titleH2_normal_me {
+        
+        font-size: 1.2rem;
+        
+    }
+}
+
+@media screen and (min-width: 769px) {
+
+    .title_normal_me,
+    .container_normal_me,
+    .more_normal_me {
+
+        margin: 0 1px;
+
+    }
+
+
+    .titleH2_normal_me {
+        
+        font-size: 1.4rem;
+        
+    }
+
+    .name_normal_me {
+
+        height: 40px;
+        padding: 13px 10px 0 0;
+
+        font-size: 0.9rem;
+        font-weight: 700;
+
+    }
+
+    .price_normal_me {
+        padding: 0 10px;
+    }
+
+    .price_number_normal_me {
+        
+        font-size: 1rem;
+        /* font-weight: 600;
+        padding-left: 2px;
+        text-align: end;
+        color: #3f4064; */
+    
+    }
+
+    .price_toman_normal_me {
+        width: 30px;
+        font-size: 0.8rem;
+        /* padding-left: 5px; */
+        /* color: #3f4064; */
+    
+    
+    }
+
+
+    .price_percent_normal_me {
+        font-size: 0.8rem;
+        padding: 0 1px;
+        
+        border-radius: 5px;
+    
+    
+    }
+
+    .oldPrice_normal_me {
+        padding: 0 10px;
+        font-size: 0.8rem;
+       
+    
+    }
+}
