--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,11 @@
+
+:root {
+
+    --colorMore:#92b6c4;
+    /* --paddingContainer : 0 clamp(3px , 0.8vw , 15px); */
+    --paddingContainer :clamp(3px , 2vw , 20px);
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -8,4 +16,5 @@
 body {
     margin: 0;
     font-size: 16px;
+    padding-bottom: 50px;
 }
