--- a/src/components/header/subHeader/topHeader.css
+++ b/src/components/header/subHeader/topHeader.css
@@ -1,4 +1,3 @@
-
 .container_header_logo {
     width: 100%;
     height: 45px;
@@ -43,7 +42,8 @@
 }
 
 
-.iUpSign_THe {
+.iUpSign_THe,
+.iUpAvatar_THe {
     font-size: 1rem;
     color: red;
     position: relative;
@@ -57,7 +57,8 @@
 }
 
 
-.showSignLink_THe {
+.showSignLink_THe,
+.showProfileLink_THe {
     width: 220px;
     padding: 0 8px;
     background-color: #fff;
@@ -76,7 +77,7 @@
     margin-left: 170px;
     display: inline;
     position: relative;
-    top: -18px;
+    top: -16px;
     font-size: 1.4rem;
     color: #919090;
 }
@@ -93,14 +94,16 @@
 }
 
 
-.signLink_THe {
+.signLink_THe,
+.profileLink_THe,
+.btnSignOut_THe {
     height: 40px;
     margin-top: -15px;
     margin-bottom: 25px;
     padding-right: 12px;
     display: flex;
     flex-direction: row-reverse;
-    column-gap: 8px;
+    column-gap: 15px;
     align-items: center;
     background-color: #eee;
 }
@@ -117,20 +120,93 @@
 }
 
 
-.signLink_THe span {
+.signLink_THe span,
+.showProfileLink_THe span {
+
     font-size: 0.9rem;
     font-weight: 700;
+
 }
 
 
 .spanSignIn {
+
     position: relative;
-    top: -4px;
+    /* top: -4px; */
+
 }
 
 
 .iSignIn {
+
     rotate: 180deg;
+
+}
+
+
+.btnAvatar_THe {
+
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+}
+
+
+.avatar_THe {
+
+    display: inline-flex;
+    width: 27px;
+    height: 27px;
+    border: 2px solid #20a0b5;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+
+}
+
+
+.iAvatar_THe {}
+
+
+.iDownAvatar_THe {
+
+    font-size: 0.9rem;
+    position: relative;
+    top: 5px;
+    color: #20a0b5;
+
+}
+
+
+.iUpAvatar_THe {
+    font-size: 0.8rem;
+    margin-right: 0;
+}
+
+
+
+.showProfileLink_THe {
+
+    right: 7px;
+    top: 43px;
+
+}
+
+.showProfileLink_THe .iCaretUp {
+    margin-left: 175px;
+    /* top: -16px; */
+
+}
+
+.profileLink_THe {}
+
+
+.btnSignOut_THe {
+    width: 100%;
+    background-color: #eee !important;
+    color: #ff0000;
+    margin-bottom: 15px;
+
 }
 
 
@@ -171,7 +247,7 @@
 
 
     .iCaretUp {
-        top: -20px;
+        top: -17px;
         font-size: 1.5rem;
         right: 10px;
     }
@@ -207,14 +283,48 @@
 
     .iCaretUp {
         margin-left: 200px;
-        top: -23px;
+        top: -20px;
         font-size: 1.6rem;
         right: 10px;
     }
 
 
-    .signLink_THe span {
-        font-size: 0.95rem;
+    .signLink_THe span,
+    .showProfileLink_THe span {
+        font-size: 1rem;
+    }
+
+
+    .avatar_THe {
+
+        width: 36px;
+        height: 36px;
+
+    }
+
+
+    .iAvatar_THe {}
+
+
+    .iDownAvatar_THe,
+    .iUpAvatar_THe {
+
+        font-size: 1rem;
+
+    }
+
+
+    .showProfileLink_THe {
+
+        right: 17px;
+        top: 44px;
+
+    }
+
+    .showProfileLink_THe .iCaretUp {
+        margin-left: 175px;
+        /* top: -16px; */
+
     }
 
 }
@@ -232,6 +342,30 @@
         font-size: 1.6rem;
     }
 
+
+    .signLink_THe span,
+    .showProfileLink_THe span {
+        font-size: 1.2rem;
+    }
+
+
+    .avatar_THe {
+
+        width: 40px;
+        height: 40px;
+
+    }
+
+
+    .iAvatar_THe {
+        font-size: 1.72rem;
+    }
+
+    .showProfileLink_THe {
+
+        top: 46px;
+
+    }
 }
 
 
@@ -245,9 +379,44 @@
         font-size: 28px;
     }
 
+    .showSignLink_THe,
+    .showProfileLink_THe {
+
+        top: 47px;
+        right: 18px;
+    }
+
+
 
     .iCaretUp {
-        top: -29px;
+        top: -24px;
+
+    }
+
+
+    .signLink_THe span,
+    .showProfileLink_THe span {
+        font-size: 1.28rem;
+    }
+
+
+    .avatar_THe {
+
+        width: 46px;
+        height: 46px;
+
+    }
+
+
+    .iAvatar_THe {
+        font-size: 1.95rem;
+    }
+
+
+    .iDownAvatar_THe,
+    .iUpAvatar_THe {
+
+        font-size: 1.3rem;
 
     }
 
