--- a/src/components/header/subHeader/verticalMenu/verticalMenu.css
+++ b/src/components/header/subHeader/verticalMenu/verticalMenu.css
@@ -1,4 +1,5 @@
-.containerMain_CME {
+.containerMain_VMe {
+
     width: 0;
     height: 100vh;
     position: fixed;
@@ -6,12 +7,14 @@
     right: 0;
     transition: all 0.42s linear;
     z-index: 1000;
+
 }
 
 /**
 * The bottom layer has opacity
 */
-.divOpacity_CME {
+.divOpacity_VMe {
+
     width: 100%;
     height: 100vh;
     background-color: #979797;
@@ -20,10 +23,12 @@
     right: 0;
     z-index: 1000;
     opacity: 0.7;
+
 }
 
 
-.containerMenu_CME {
+.verticalMenu_VMe_VMe {
+
     width: 0;
     max-width: max-content;
     min-width: 33%;
@@ -35,20 +40,26 @@
     z-index: 2000;
     overflow: auto;
     transition: all 0.4s linear;
+
 }
 
 
-.divBtnClose_CME {
+.divBtnClose_VMe {
+
     border-bottom: 1px solid #dbdbdb;
+
 }
 
 
-.btnClose_CME {
+.btnClose_VMe {
+
     color: red;
+
 }
 
 
-.cotainerItems_CME {
+.cotainerItems_VMe {
+
     padding: 5px;
     direction: rtl;
     background-color: #f3f3f3;
@@ -56,16 +67,19 @@
 }
 
 
-.divItems_CME {
+.divItems_VMe {
+
     padding: 3px 2px;
     margin-bottom: 16px;
     background-color: #fff;
     border-radius: 3px;
+
 }
 
 
-.btnItem_CME,
-.linkItem_CME {
+.btnItem_VMe,
+.linkItem_VMe {
+
     width: 100%;
     margin: 4px 0 6px;
     padding: 2px 7px 4px 4px;
@@ -73,36 +87,47 @@
     align-items: center;
     border-radius: 8px;
     column-gap: 7px;
+
 }
 
 
-.btnItem_CME:hover,
-.linkItem_CME:hover {
+.btnItem_VMe:hover,
+.linkItem_VMe:hover {
+
     color: #4d4dad;
+
 }
 
 
-.btnItem_CME i,
-.linkItem_CME i {
+.btnItem_VMe i,
+.linkItem_VMe i {
+
     font-size: 1.1rem;
+
 }
 
 
-.btnItem_CME span,
-.linkItem_CME span {
+.btnItem_VMe span,
+.linkItem_VMe span {
+
     font-size: 0.8rem;
     font-weight: 600;
     position: relative;
     top: -2px;
+
 }
 
 
-.btnItem_CME i.lastChild_CME {
+.btnItem_VMe i.lastChild_VMe {
+
     margin-right: auto;
+
 }
 
 
-.divShowSubMenu_CME {
+.divShowSubMenu_VMe {
+
     width: 100%;
     position: relative;
+
 }
