--- a/src/components/header/subHeader/verticalMenu/verticalMenu.css
+++ b/src/components/header/subHeader/verticalMenu/verticalMenu.css
@@ -27,7 +27,7 @@
 }
 
 
-.verticalMenu_VMe_VMe {
+.verticalMenu_VMe {
 
     width: 0;
     max-width: max-content;
@@ -110,8 +110,7 @@
 .btnItem_VMe span,
 .linkItem_VMe span {
 
-    font-size: 0.8rem;
-    font-weight: 600;
+
     position: relative;
     top: -2px;
 
@@ -125,9 +124,32 @@
 }
 
 
+.profileLink_VMe span {
+    top: 3px;
+}
+
+
+.signOutBtn_VMe {
+
+    color: #ff0000;
+}
+
+
 .divShowSubMenu_VMe {
 
     width: 100%;
     position: relative;
+
+}
+
+@media screen and (min-width: 768px) {
+
+    .btnItem_VMe span,
+    .linkItem_VMe span {
+
+        font-size: 1.15rem;
+        top: -2px;
+
+    }
 
 }
