--- a/src/components/form/input/input.css
+++ b/src/components/form/input/input.css
@@ -79,7 +79,7 @@
     height: 15px;
     padding-right: 8px;
     display: block;
-    font-size: 0.73rem;
+    font-size: 0.83rem;
     color: #797979;
     direction: rtl;
 
@@ -106,7 +106,7 @@
 
     display: block;
     padding-right: 21px;
-    color: #636363;
+    color: #000000;
     text-align: right;
 
 }
@@ -148,7 +148,7 @@
 }
 
 
-.swalHtmlContainer {
+/* .swalHtmlContainer {
 
     text-align: right !important;
     margin: 0 !important;
@@ -156,16 +156,16 @@
     color: #b35f06 !important;
     direction: rtl;
 
-}
+} */
 
 
-.swalUl_IF {
+/* .swalUl_IF {
 
     padding-right: 5px !important;
     list-style-position: inside;
     direction: rtl;
 
-}
+} */
 
 
 .pAlert_IF {
@@ -290,6 +290,24 @@
 
 
 @media screen and (min-width: 768px) {
+
+    .lable_IF {
+
+        height: 17px;
+        padding-right: 12px;
+        font-size: 0.91rem;
+
+
+    }
+
+
+    .input_IF {
+
+        padding: 0 14px 5px;
+
+    }
+
+
 
     .swalPopup_IF {
 
