--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -56,15 +56,365 @@
 }
 
 
-.groupInput {
+.containerWrapper_Fo {
 
-    width: 100%;
-    margin: 15px 0 5px;
+    margin: 10px auto 20px;
 
 }
 
 
-.inputForm {
+.wrapper_Fo {
+
+    height: 45;
+    margin: 5px 0 2px;
+    background-color: #fff;
+    border: 1px solid #eaecef;
+    border-radius: 8px;
+    position: relative;
+
+}
+
+
+.iStar_Fo,
+.iEye_Fo,
+.iTrue_Fo,
+.iFalse_Fo {
+
+    border-radius: 50%;
+    background-color: #fff;
+    position: absolute;
+    left: 18px;
+    z-index: 100;
+
+}
+
+
+.iStar_Fo {
+    top: -3.5px;
+    left: 8px;
+    color: #6e0707;
+    font-size: 0.46rem;
+}
+
+
+.iEye_Fo {
+
+    top: -9.5px;
+    left: 35px;
+    font-size: 1.2rem;
+
+}
+
+
+.iEye_Fo:hover {
+
+    cursor: pointer;
+    color: #064968;
+
+}
+
+
+.iTrue_Fo {
+
+    top: -7px;
+    color: #008000;
+    font-size: 0.62rem;
+
+}
+
+
+.iFalse_Fo {
+
+    top: -9.6px;
+    font-size: 1.1rem;
+    color: red;
+
+}
+
+
+.label_Fo {
+
+    height: 16px;
+    padding-right: 8px;
+    display: block;
+    font-size: 0.83rem;
+    color: #797979;
+    direction: rtl;
+
+}
+
+.labelTextarea_Fo {
+    height: 20px;
+}
+
+
+.input_Fo,
+.textarea_F {
+
+    width: 100%;
+    height: 28px;
+    padding: 0 8px 5px;
+    border: none;
+    border-radius: 8px;
+
+}
+
+
+.textarea_Fo {
+
+    min-height: 55px;
+    padding-top: 7px;
+
+}
+
+
+.input_Fo::placeholder,
+.textarea_Fo::placeholder {
+
+    display: block;
+    padding-right: 21px;
+    color: #000000;
+    text-align: right;
+
+}
+
+
+.input_Fo:focus::placeholder,
+.textarea_Fo:focus::placeholder {
+
+    color: #858484;
+
+}
+
+
+.errorDiv_Fo {
+
+    color: #ff0000ee;
+    font-size: 0.72rem;
+    padding: 2px 5px;
+    background-color: #faeeee;
+    direction: rtl;
+    border-radius: 3px;
+
+}
+
+
+.btnForm {
+
+    width: 100%;
+    height: 35px;
+    background-color: green;
+    border: none;
+    border-radius: 12px;
+    color: #ffffff;
+    font-size: 1rem;
+}
+
+
+.btnForm:hover {
+    border: 1px solid #fff;
+}
+
+
+.borderBottomColor_Fo {
+
+    border-bottom-color: #1b7fad;
+
+}
+
+
+.greenBorder_Fo {
+
+    border-color: #008000;
+
+}
+
+
+.redBorder_Fo {
+
+    border-color: #ff0000;
+
+}
+
+
+.colorWarning_Fo {
+
+    color: #d0730f;
+
+}
+
+
+/* ********************** select ********************* */
+
+.select_Fo {
+
+    width: calc(100% - 10px);
+    margin-left: 10px;
+    padding: 0 8px;
+    background-color: #fff;
+    direction: rtl;
+    border: none;
+    border-radius: 0 0 8px 8px;
+}
+
+
+.alertSelectState_Fo {
+    padding-right: 5px;
+    color: #ff0000;
+}
+
+
+@media screen and (min-width:320px) {
+
+    .titleForm h3 {
+
+        padding: 10px 0 0;
+        font-size: 1.5rem;
+
+    }
+
+    .containerWrapper_Fo {
+
+        margin: 20px auto 30px;
+
+    }
+
+
+}
+
+
+@media screen and (min-width: 568px) {
+
+    .iStar_Fo {
+
+        top: -4.5px;
+        font-size: 0.53rem;
+
+    }
+
+
+    .iEye_Fo {
+
+        top: -10.5px;
+        left: 38px;
+        font-size: 1.3rem;
+
+    }
+
+
+    .iTrue_Fo {
+
+        top: -7px;
+        font-size: 0.73rem;
+
+    }
+
+
+}
+
+
+@media screen and (min-width:768px) {
+
+    .form {
+
+        max-width: 600px;
+        margin: 20px auto;
+        padding: 0 150px 15px;
+
+    }
+
+
+    .label_Fo {
+
+        height: 17px;
+        padding-right: 12px;
+        font-size: 0.91rem;
+
+
+    }
+
+
+    .labelTextarea_Fo {
+
+        height: 22px;
+
+    }
+
+
+    .input_Fo,
+    .textarea_Fo {
+
+        padding: 0 14px 5px;
+
+    }
+
+    .textarea_Fo {
+
+        min-height: 65px;
+        padding-top: 9px;
+
+    }
+
+    .select_Fo {
+
+        width: calc(100% - 15px);
+        margin-left: 15px;
+        padding: 0 14px;
+
+    }
+
+
+    .iStar_Fo {
+
+        top: -4.5px;
+        font-size: 0.56rem;
+
+    }
+
+
+    .iTrue_Fo {
+
+        font-size: 0.8rem;
+
+    }
+
+
+    .errorDiv_Fo {
+
+        font-size: 0.9rem;
+        padding: 5px 9px;
+
+    }
+
+}
+
+
+
+
+@media screen and (min-width:1200px) {
+
+
+    .btnForm {
+
+        height: 40px;
+        background-color: #008000;
+        font-size: 1.18rem;
+    }
+
+}
+
+
+
+
+/* .groupInput {
+
+    width: 100%;
+    margin: 15px 0 5px;
+
+} */
+
+
+/* .inputForm {
 
     width: 100%;
     height: 40px;
@@ -75,24 +425,24 @@
     border: 1px solid #eaecef;
     border-radius: 12px;
 
-}
+} */
 
 
-.inputForm:focus-within {
+/* .inputForm:focus-within {
 
     border-color: #30badd;
 
-}
+} */
 
 
-.inputForm input:focus {
+/* .inputForm input:focus {
 
     border: none;
 
-}
+} */
 
 
-.inputForm label {
+/* .inputForm label {
 
     width: 100%;
     height: inherit;
@@ -101,10 +451,10 @@
     align-items: center;
     justify-content: start;
 
-}
+} */
 
 
-.divLabel {
+/* .divLabel {
 
     width: 100%;
     height: fit-content;
@@ -117,10 +467,10 @@
     justify-content: space-between;
     border-radius: 12px 12px 0 0;
 
-}
+} */
 
 
-.inputForm i {
+/* .inputForm i {
 
     width: 12px;
     display: flex;
@@ -134,23 +484,23 @@
     font-size: 14px;
     display: none;
 
-}
+} */
 
 
-.inputForm i.true {
+/* .inputForm i.true {
 
     color: #008000;
 
-}
+} */
 
 
-.inputForm i.false {
+/* .inputForm i.false {
 
     color: #ff0000;
 
-}
+} */
 
-
+/* 
 .inputForm input {
 
     width: 100%;
@@ -159,24 +509,24 @@
     border: none;
     border-radius: 12px;
 
-}
+} */
 
 
-.inputForm input:focus {
+/* .inputForm input:focus {
 
     outline: none;
 
-}
+} */
 
 /* // کلاس برای هنگامی که کاربر تکس باکس را انتخاب می کند */
-.inputFromSelect {
+/* .inputFromSelect {
 
     flex-flow: column;
 
-}
+} */
 
 
-.inputFromSelect label {
+/* .inputFromSelect label {
 
     height: 14px;
     margin: 0;
@@ -184,30 +534,30 @@
     color: #686868;
     font-size: 8px;
 
-}
+} */
 
 
-.inputFromSelect input {
+/* .inputFromSelect input {
 
     height: 24px;
     margin: 0;
     border-radius: 0 0 12px 12px;
     padding: 0 13px;
 
-}
+} */
 
 
-.errorInput {
+/* .errorInput {
 
     width: 100%;
     padding: 0 9px;
     color: red;
     font-size: 12px;
 
-}
+} */
 
 
-.captchaPic {
+/* .captchaPic {
 
     width: 100%;
     height: 30px;
@@ -236,83 +586,30 @@
     background-color: blue;
     color: white;
 
-}
+} */
 
 
-.btnForm {
-
-    width: 100%;
-    height: 35px;
-    background-color: green;
-    border: none;
-    border-radius: 12px;
-    color: #ffffff;
-    font-size: 1rem;
-}
 
 
-.btnForm:hover {
-    border: 1px solid #fff;
-}
-
-
+/* 
 .updateCode {
 
     width: 100%;
     padding: 15px 10px;
 
-}
+} */
 
 
-.textUpdateCode {
+/* .textUpdateCode {
 
     color: #3a6291;
 
-}
+} */
 
 
-.formLeft {
+/* .formLeft {
 
     width: 200px;
     background-color: #eee;
 
-}
-
-
-
-@media screen and (min-width:320px) {
-
-    .titleForm h3 {
-
-        padding: 10px 0 0;
-        font-size: 1.5rem;
-
-    }
-
-}
-
-
-@media screen and (min-width:768px) {
-
-    .form {
-
-        max-width: 600px;
-        margin: 20px auto;
-        padding: 0 150px 15px;
-
-    }
-
-}
-
-
-@media screen and (min-width:1200px) {
-
-
-    .btnForm {
-
-        height: 40px;
-        background-color: #008000;
-        font-size: 1.18rem;
-    }
-
-}
+} */
